// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New component renders correctly with text 1`] = `
<div>
  <div class="row">
    <div class="col-12 d-flex align-items-center justify-content-between">
      <h2>
        New todo
      </h2> <a class="font-weight-bold"><i class="fas fa-list-alt mr-2"></i>
        Todo list
      </a>
    </div>
  </div>
  <form>
    <div class="row mt-3">
      <div class="col-12"><textarea placeholder="Write the todo text here..." class="form-control form-control-lg mb-2"></textarea></div>
    </div>
    <div class="row mt-3">
      <div class="col-12 text-center"><button type="button" class="btn btn-primary font-weight-bold"><i class="fas fa-save mr-2"></i>
          Save
        </button></div>
    </div>
  </form>
</div>
`;

exports[`New component renders correctly without text 1`] = `
<div>
  <div class="row">
    <div class="col-12 d-flex align-items-center justify-content-between">
      <h2>
        New todo
      </h2> <a class="font-weight-bold"><i class="fas fa-list-alt mr-2"></i>
        Todo list
      </a>
    </div>
  </div>
  <form>
    <div class="row mt-3">
      <div class="col-12"><textarea placeholder="Write the todo text here..." class="form-control form-control-lg mb-2"></textarea></div>
    </div>
    <div class="row mt-3">
      <div class="col-12 text-center"><button disabled="disabled" type="button" class="btn btn-primary font-weight-bold"><i class="fas fa-save mr-2"></i>
          Save
        </button></div>
    </div>
  </form>
</div>
`;
